[package]
name = "employee_contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
sep_0041 = { workspace = true}

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sep_0041 = { workspace = true}
